# makehuman

./: README.md
branches/glynnsbranch/: make_diff_against_trunk.bash
branches/glynnsbranch/makehuman/: INSTALL_DEB_DEPENDENCIES.bash  INSTALL_RPM_DEPENDENCIES.bash  SConstruct  compile_src_osx.sh  main.py  mh_export.config  update.bat
releases/makehuman_1_0_0_alpha3/: main.py
releases/makehuman_1_0_0_alpha3a/: Makefile.Linux  compile_src.bat  compile_src_osx.sh
releases/makehuman_1_0_0_alpha3b/: main.py
releases/makehuman_1_0_0_alpha4/: Makefile.Linux  compile_module.bat  setup.nsi
releases/makehuman_1_0_0_alpha5/: Makefile.osx
releases/makehuman_1_0_0_alpha5_1/: Makefile.Linux  main.py  proxy.cfg
releases/makehuman_1_0_0_alpha6/: Makefile.osx  compile_src.bat  compile_src_module.bat  main.py
releases/makehuman_1_0_0_alpha7/: Makefile.osx  license.txt  main.py
trunk/makehuman/: INSTALL_DEB_DEPENDENCIES.bash  Makefile.Linux  Makefile.osx  Makefile.solaris  Makefile_osx  SConstruct  compile_src.bat  compile_src.sh  compile_targets.py  compressTargetsASCII.py  copy2blender.bat  license.txt  main.c  main.py  makehuman  makehuman.py  mh_export.config  proxy.cfg  resource.h  setup.nsi  update-linux32.sh  update-linux64.sh
trunk/makehuman/os-x/tools/FontTransFixer/: CMakeLists.txt
trunk/makehuman/utils/fixmesh/: .anjuta_sym_db.db  Makefile.am  Makefile.in  Makefile.osx  Readme.txt  TODO.tasks  aclocal.m4  configure  configure.ac  fixall  macrodet  shapes.py  utils.py
trunk/makehuman/utils/fixmesh/.anjuta/: default.profile
trunk/makehuman/utils/fixmesh/.anjuta/session/: anjuta.session  dock-layout.xml
trunk/makehuman/utils/fixmesh/Debug/: Makefile  config.h  config.status  libtool
trunk/makehuman/utils/fixmesh/Debug/po/: Makefile  Makefile.in  POTFILES
trunk/makehuman/utils/fixmesh/Debug/src/: Makefile  fixmesh
trunk/makehuman/utils/fixmesh/Debug/src/.deps/: cluster.Po  dump.Po  gauss.Po  group.Po  main.Po  mesh.Po  neigh.Po  obj.Po  vector.Po
trunk/makehuman/utils/fixmesh/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
trunk/makehuman/utils/fixmesh/base/new/: base-w-groups.blend  grbase.mhx
trunk/makehuman/utils/fixmesh/include/: hdr.h  vector.h
trunk/makehuman/utils/fixmesh/src/: Makefile.am  Makefile.am.bak  Makefile.in  dump.cc  gauss.cc  group.cc  hdr.h  main.cc  mesh.cc  obj.cc
wiki/: PageName.wiki  TableOfContents.wiki  Welcome.wiki  artistGuideLines.wiki
(+17273 files in other folders)
